--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ ext.versions = [
         publishVersionCode: 175,
         gradlePlugin: '2.3.2',
 
-        supportLib: '25.3.1',
+        supportLib: '26.0.0-beta1',
         mdProgressBar: '1.4.1',
         butterKnife: '8.6.0'
 ]
